# wine-breeze

./: Cargo.toml  README.md  build.rs  justfile
.github/workflows/: build.yml
prototype/: breeze_by_zeinok.reg  theme.reg
src/: main.rs  main_linux.rs  main_win32.rs
src/foundation/: config.rs  kdeglobals.rs  mod.rs  registry.rs
src/theme/: classic.rs  colors.rs  dark.rs  mod.rs
