[package]
name = "wine-breeze"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[workspace.dependencies]
crc32fast = "1.5.0"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
thiserror = "2.0.16"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.0", features = ["Win32_System_Registry"] }

[target.'cfg(unix)'.dependencies]
crc32fast = { workspace = true }

[build-dependencies]
crc32fast = { workspace = true }
